--- a/index.html
+++ b/index.html
@@ -111,13 +111,11 @@
   </div>
 
   <div class="ad">
-    <!--
     <ins class="kakao_ad_area" style="display:none;" 
-     data-ad-unit    = "DAN-q1YXF1Mu8t3SSkZv" 
+     data-ad-unit    = "DAN-0llds7xXRlnbyOBy" 
      data-ad-width   = "320" 
      data-ad-height  = "50"></ins> 
     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-  -->
   </div>
     <!-- JavaScript -->
     <script type="text/javascript" src="js/clock.js"></script>
